--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -87,5 +87,7 @@ nav a:hover{
 .project-items{
     margin-top: 25px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
